test/suite/samples/block_host_network/allow/pod_allowed_namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-pod
  namespace: kube-system
spec:
  hostNetwork: true
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          sleep 3600
  restartPolicy: Never
