test/suite/samples/block_host_network/allow/pod_no_hostnetwork.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod
  namespace: starter-pack
spec:
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          sleep 3600
  restartPolicy: Never
