test/suite/samples/block_host_network/allow/pod_observability_namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloudwatch-agent
  namespace: amazon-cloudwatch
spec:
  hostNetwork: true
  containers:
    - name: cloudwatch-agent
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          sleep 3600
  restartPolicy: Never
