test/suite/samples/block_host_network/deny/pod_hostnetwork_set.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-pod
  namespace: starter-pack
spec:
  hostNetwork: true
  containers:
    - name: busybox
      image: busybox:1.36
      command:
        - sh
        - -c
        - |
          sleep 3600
  restartPolicy: Never
