test/suite/samples/coraza_waf_include/allow_with_with_include/case.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyExtensionPolicy
metadata:
  name: example-waf
  namespace: starter-pack
spec:
  dynamicModule:
    - name: composer
      filterName: coraza-waf
      config:
        directives:
          - Include @coraza.conf
          - SecRuleEngine On
          - Include @crs-setup.conf
          - Include @owasp_crs/*.conf
          - Include /etc/coraza/cp/coraza-cp.conf
